# CRask

./: .gitignore  Rakefile  cucumber.yml  libcrask_paths.rb  todo.txt
features/: class_instantiation.feature  classes.feature  constructors.feature  destructors.feature  empty_source.feature  instance_methods.feature  local_variables.feature  method_call.feature
features/step_definitions/: steps.rb
lib/: craskc.rb  main.rb
lib/crask/: arg_ordering_policy.rb  argument_ordering_policy.rb  assignment_code_generator.rb  ast.rb  automatic_reference_counting_generator.rb  automatic_reference_counting_method_updater.rb  c_expression_printer.rb  c_function_argument_printer.rb  c_function_builder.rb  c_function_call_printer.rb  c_function_printer.rb  c_global_variable_printer.rb  c_include_printer.rb  c_local_variable_printer.rb  c_module_builder.rb  c_module_printer_factory.rb  c_return_printer.rb  c_statement_printer.rb  class_definition.rb  class_generator.rb  code_generator.rb  code_generator_factory.rb  code_generator_generate.rb  default_methods_generator.rb  generator_configuration.rb  local_variable_declarator.rb  local_variable_detector.rb  method_call_generator.rb  method_code_generator.rb  method_definition.rb  method_name_generator.rb  module_compiler.rb  module_compiler_factory.rb  name_generator.rb  parser.rb  racc_parser.racc  racc_parser.rex  statement_code_generator.rb  (+3 more)
libcrask/: CMakeLists.txt  libcrask.kdev4
libcrask/include/: crask.h
libcrask/src/: crask.cpp
libcrask/test/: classes.cpp  demo.c  main.cpp
performance/: bubblesort.c  bubblesort.rask
(+141 files in other folders)
